German dpkg translation update
Update to 968t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ dpkg (1.15.6.2) UNRELEASED; urgency=low
   * Document most common warnings and errors of dpkg-source in its manual
     page.
 
+  [ Updated dpkg translations ]
+  * German (Sven Joachim).
+
   [ Updated dselect translations ]
   * German (Sven Joachim).
 
