--- a/po/de.po
+++ b/po/de.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.15.6~\n"
+"Project-Id-Version: Debian dpkg 1.15.6.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2010-03-24 13:59+0100\n"
-"PO-Revision-Date: 2010-02-25 11:17+0100\n"
+"PO-Revision-Date: 2010-03-31 20:03+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -19,19 +19,19 @@ msgstr ""
 "Content-Transfer-Encoding: 8-bit\n"
 
 #: lib/dpkg/buffer.c:254
-#, fuzzy, c-format
+#, c-format
 msgid "failed to read on buffer copy for %s"
-msgstr "fehlgeschlagen in buffer_copy (%s)"
+msgstr "Lesen aus Pufferkopie für %s fehlgeschlagen"
 
 #: lib/dpkg/buffer.c:256
-#, fuzzy, c-format
+#, c-format
 msgid "failed in write on buffer copy for %s"
-msgstr "fehlgeschlagen in buffer_copy (%s)"
+msgstr "Schreiben in Pufferkopie für %s fehlgeschlagen"
 
 #: lib/dpkg/buffer.c:258
-#, fuzzy, c-format
+#, c-format
 msgid "short read on buffer copy for %s"
-msgstr "nicht vollständig gelesen in buffer_copy (%s)"
+msgstr "nicht vollständig gelesen in Pufferkopie für %s"
 
 #: lib/dpkg/command.c:182
 #, c-format
@@ -210,7 +210,7 @@ msgstr "Kann den aktualisierten Status von »%.250s« nicht schreiben"
 #: lib/dpkg/dbmodify.c:295
 #, c-format
 msgid "unable to flush updated status of `%.250s'"
-msgstr "Kann den aktualisierten Status von »%.250s« nicht leeren"
+msgstr "Kann den aktualisierten Status von »%.250s« nicht zurückschreiben"
 
 #: lib/dpkg/dbmodify.c:297
 #, c-format
@@ -915,9 +915,9 @@ msgid "subprocess %s failed with wait status code %d"
 msgstr "Unterprozess %s mit Warte-Statuswert %d fehlgeschlagen"
 
 #: lib/dpkg/subproc.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "wait for subprocess %s failed"
-msgstr "Warten auf %s fehlgeschlagen"
+msgstr "Warten auf Unterprozess %s fehlgeschlagen"
 
 #: lib/dpkg/trigdeferred.l:71
 #, c-format
@@ -1026,14 +1026,14 @@ msgid "unable to write new trigger interest file `%.250s'"
 msgstr "Kann neue Trigger-Interessendatei »%.250s« nicht schreiben"
 
 #: lib/dpkg/triglib.c:428
-#, fuzzy, c-format
+#, c-format
 msgid "unable to flush new trigger interest file '%.250s'"
-msgstr "Kann neue Trigger-Interessendatei »%.250s« nicht schließen"
+msgstr "Kann neue Trigger-Interessendatei »%.250s« nicht leeren"
 
 #: lib/dpkg/triglib.c:431
-#, fuzzy, c-format
+#, c-format
 msgid "unable to sync new trigger interest file '%.250s'"
-msgstr "Kann neue Trigger-Interessendatei »%.250s« nicht schließen"
+msgstr "Kann neue Trigger-Interessendatei »%.250s« nicht synchronisieren"
 
 #: lib/dpkg/triglib.c:435
 #, c-format
@@ -1063,14 +1063,14 @@ msgid "unable to write new file triggers file `%.250s'"
 msgstr "Kann neue Dateitrigger-Datei »%.250s« nicht schreiben"
 
 #: lib/dpkg/triglib.c:538
-#, fuzzy, c-format
+#, c-format
 msgid "unable to flush new file triggers file '%.250s'"
-msgstr "Kann neue Dateitrigger-Datei »%.250s« nicht schließen"
+msgstr "Kann neue Dateitrigger-Datei »%.250s« nicht zurückschreiben"
 
 #: lib/dpkg/triglib.c:541
-#, fuzzy, c-format
+#, c-format
 msgid "unable to sync new file triggers file '%.250s'"
-msgstr "Kann neue Dateitrigger-Datei »%.250s« nicht schließen"
+msgstr "Kann neue Dateitrigger-Datei »%.250s« nicht synchronisieren"
 
 #: lib/dpkg/triglib.c:545
 #, c-format
@@ -1347,14 +1347,14 @@ msgid "unable to install new version of `%.255s'"
 msgstr "Kann neue Version von »%.255s« nicht installieren"
 
 #: src/archives.c:831
-#, fuzzy, c-format
+#, c-format
 msgid "unable to open '%.255s'"
-msgstr "Kann »%.255s« nicht anlegen"
+msgstr "Kann »%.255s« nicht öffnen"
 
 #: src/archives.c:833
-#, fuzzy, c-format
+#, c-format
 msgid "unable to sync file '%.255s'"
-msgstr "Kann kein stat auf Quelldatei »%.250s« durchführen"
+msgstr "Kann Datei »%.255s« nicht synchronisieren"
 
 #: src/archives.c:878
 #, c-format
@@ -3673,15 +3673,15 @@ msgstr "Kann neue statoverride-Datei nicht öffnen"
 
 #: src/statcmd.c:234 dpkg-deb/build.c:556 dpkg-split/join.c:73
 #: dpkg-split/queue.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "unable to flush file '%s'"
-msgstr "Kann kein fstat auf Teildatei »%.250s« durchführen"
+msgstr "Kann Datei »%s« nicht zurückschreiben"
 
 #: src/statcmd.c:236 dpkg-deb/build.c:558 dpkg-split/join.c:75
 #: dpkg-split/queue.c:173
-#, fuzzy, c-format
+#, c-format
 msgid "unable to sync file '%s'"
-msgstr "Kann kein stat auf Quelldatei »%.250s« durchführen"
+msgstr "Kann Datei »%s« nicht synchronisieren"
 
 #: src/statcmd.c:241
 msgid "error removing statoverride-old"
@@ -5527,9 +5527,8 @@ msgid "invalid status"
 msgstr "ungültiger Status"
 
 #: scripts/update-alternatives.pl:793
-#, fuzzy
 msgid "master link"
-msgstr "Master-Datei"
+msgstr "Master-Link"
 
 #: scripts/update-alternatives.pl:795
 msgid "slave name"
@@ -5674,7 +5673,7 @@ msgstr "readlink(%s) fehlgeschlagen: %s"
 #: scripts/update-alternatives.pl:1030
 #, perl-format
 msgid "can't install unknown choice %s"
-msgstr ""
+msgstr "Kann unbekannte Auswahl %s nicht installieren"
 
 #: scripts/update-alternatives.pl:1047 scripts/update-alternatives.pl:1068
 #, perl-format
