dpkg-source: support debian/source/local-options
It's like debian/source/options but it's not stored in the generated
source package. This is ensured by the way of being part of the default
ignore lists (-i and -I) and being explicitely excluded for the old
1.0 format that doesn't use the default ignore list.

--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -594,6 +594,11 @@ Here's an example of such a file:
 .P
 Note: \fBformat\fR options are not accepted in this file, you should
 use \fBdebian/source/format\fR instead.
+.SS debian/source/local-options
+Exactly like \fBdebian/source/options\fP except that the file is not
+included in the generated source package. It can be useful to store
+a preference tied to the maintainer or to the VCS repository where
+the source package is maintained.
 .SS debian/source/patch-header
 Free form text that is put on top of the automatic patch generated
 in formats "2.0" or "3.0 (quilt)".
