Update German translation of manual pages
Update to 1814t.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2010-03-07 21:33+0000\n"
-"PO-Revision-Date: 2010-03-29 19:49+0200\n"
+"PO-Revision-Date: 2010-04-02 07:49+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -12564,6 +12564,26 @@ msgid ""
 msgstr ""
 "Hinweis: B<--format>-Optionen werden in dieser Datei nicht akzeptiert, Sie "
 "sollten stattdessen B<debian/source/format> verwenden."
+
+#. type: SS
+#: dpkg-source.1:597
+#, no-wrap
+msgid "debian/source/local-options"
+msgstr "debian/source/local-options"
+
+# type: Plain text
+#. type: Plain text
+#: dpkg-source.1:602
+msgid ""
+"Exactly like B<debian/source/options> except that the file is not included "
+"in the generated source package. It can be useful to store a preference tied "
+"to the maintainer or to the VCS repository where the source package is "
+"maintained."
+msgstr ""
+"Genau wie B<debian/source/options>, außer das die Datei nicht in das "
+"erstellte Quellpaket aufgenommen wird. Dies kann nützlich sein, um "
+"Voreinstellungen zu speichern, die an einen bestimmten Betreuer oder an ein "
+"bestimmtes VCS, in dem das Paket gewartet wird, gebunden sind."
 
 #. type: SS
 #: dpkg-source.1:562
