dpkg-parsechangelog(1): precise that --all overrides the other options

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ dpkg (1.15.6.2) UNRELEASED; urgency=low
     page.
   * Let dpkg-source read options from debian/source/local-options as well but
     do not include that file in the generated source package.
+  * Improve explanation of --all option in dpkg-parsechangelog(1). Thanks to
+    Jari Aalto. Closes: #575706
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
