--- a/man/dpkg-parsechangelog.1
+++ b/man/dpkg-parsechangelog.1
@@ -103,7 +103,8 @@ change the starting point for \-\-count, counted from the top
 (or the tail if \fInumber\fP is lower than 0).
 .TP
 .B \-\-all
-include all changes.
+include all changes. Note: other options have no effect when this is in
+use.
 .
 .SH CAVEATS
 All \fBParser Options\fP except for \-v are only supported in
